# liblastword-dev

./: .gitignore  .travis.yml  API  API.es.md  API.md  AUTHORS  Doxyfile  LICENSE  Makefile.am  NEWS  README  README.es.md  README.md  bootstrap  configure.ac
doc/: Makefile.am  api.texi  indices.texi  introduction.texi  invocation.texi  libmsl-lastword-dev.texi  mit.texi  version.texi  why.texi
include/: Makefile.am
include/msl/: lastword.h
include/msl/lastword/: error.h
m4/: ax_prog_pandoc.m4
src/msl/: lastword.h  lastword_ret.h
